Add :sparkles:  ArrayList

--- a/已阅读代码清单——包名分类.md
+++ b/已阅读代码清单——包名分类.md
@@ -18,3 +18,4 @@
   * :full_moon: [*Iterator*](src/java/util/Iterator.java)
   * :full_moon: [*ListIterator*](src/java/util/ListIterator.java)
   * :full_moon: [*Arrays*](src/java/util/Arrays.java)
+  * :full_moon: [*ArrayList*](src/java/util/ArrayList.java)
